# plant_growth_simulation

./: pyproject.toml
data/: results.csv
notebooks/: data_generation.ipynb
