[tool.poetry]
name = "plant_growth_simulation"
version = "0.1.0"
description = ""
authors = ["Przemysław Postrch <przemyslaw.postrach@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
jupyter = "^1.0.0"
Faker = "^15.2.0"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

